--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # See https://morea-framework.github.io/docs/instructors/config-yml
 
 # SITE SPECIFIC: The following fields are typically changed for each site
-name: EE160
+name: EE160-Fall23
 baseurl: /EE160
 morea_theme: spacelab
 timezone: Pacific/Honolulu
